# meta-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.jmpartners  Dockerfile.jmpartners-dashboard  Dockerfile.leadcommercial  Dockerfile.leadcommercial-dashboard  LICENSE  README.md  brief_exemple.json  dashboard_jm.html  pyproject.toml  railway.toml  test_secrets.py
.github/workflows/: ci.yml  prompt-tests.yml
apps/email_agent/: analyzer.py  analyzer.pyœ  gmail_client.py  main.py  orchestrator.py  outlook_client.py  reporter.py  (+4 more)
configs/: client_email_nom_du_client_:_testclient.json  client_email_vesper.json
db/: README.md
docs/: API.md  AUDIT_RAPPORT.md  BUSINESS_COMPASS.md  CLIENT_ONBOARDING.md  RAILWAY_DEPLOY.md  business.html  index.html  jmpartners_architecture.md  jmpartners_runbook.md
scripts/: check_supabase_connexion.py  check_telegram.py  demo_leadcommercial.py  dry_run_orchestrator.py  fix_railway.sh  health_check.py  jeffrey_call_claude.py  jeffrey_hello.py  onboarding_client.py  rapport_qualite_50_leads.py  run_email_agent.sh  run_email_agent_vesper.sh  run_smoke_test.sh  smoke_test_jmpartners.py  test_insee_sirene.py  test_rne_dirigeant.py
supabase/: config.toml
tests/: test_agents_email_analyzer.py  test_agents_gmail_fetcher.py  test_agents_gmail_reporter.py  test_agents_outlook_fetcher.py  test_agents_report_builder.py  test_agents_supabase_writer.py  test_agents_telegram_sender.py  test_analyzer.py  test_email_storage.py  test_gmail_client.py  test_jmpartners_dashboard.py  test_lc_agents_lead_scorer.py  test_lc_agents_pappers_enricher.py  test_lc_agents_sirene_fetcher.py  test_lc_agents_supabase_writer.py  test_lc_agents_telegram_notifier.py  test_lc_orchestrator.py  test_leadcommercial_dashboard.py  test_main_leadcommercial.py  test_orchestrator.py  test_pappers_client.py  test_pipeline.py  test_runtime.py  test_scorer.py  test_shared_claude_client.py  test_shared_smtp.py  test_shared_telegram.py  test_sirene_client.py  test_supabase_client.py
(+189 files in other folders)
