[project]
name = "meta-agent"
version = "0.1.0"
description = "Meta-agent project"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "langfuse>=4.5.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
