[project]
name = "meta-agent"
version = "0.1.0"
description = "Meta-agent project"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.96.0",
    "apscheduler>=3.10.4,<4.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "langfuse>=4.5.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "schedule>=1.2.2",
    "sentry-sdk>=2.58.0",
    "supabase>=2.29.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]


[tool.mypy]
explicit_package_bases = true
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "types-requests>=2.33.0.20260408",
    "httpx>=0.28.0",
]
